--- a/mvc/mvc/Views/Shared/_Layout.cshtml
+++ b/mvc/mvc/Views/Shared/_Layout.cshtml
@@ -39,5 +39,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/user")
 </body>
 </html>
